Added rewards type (#66)
Signed-off-by: Alessio <slux83@gmail.com>
Co-authored-by: Alessio <slux83@gmail.com>